// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No 'No value' option when default value is 0 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-default-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="react-select-container css-2b097c-container"
            id="field-my-field"
          >
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            >
              <span
                id="aria-selection"
              />
              <span
                id="aria-context"
              >
                option 0 focused, 1 of 2. 2 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
              </span>
            </span>
            <div
              class="react-select__control react-select__control--is-focused react-select__control--menu-is-open css-1ptmoe7-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-1a9cv00-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  None
                </div>
                <div
                  class="css-b8ldur-Input"
                >
                  <div
                    class="react-select__input"
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="react-select-3-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__clear-indicator css-1v154vq-ClearIndicator"
                >
                  <svg
                    class="icon"
                    style="height: 18px; width: auto; fill: #e40166;"
                    viewBox=""
                    xmlns=""
                  />
                </div>
                <span
                  class="react-select__indicator-separator css-6fp5c8-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-7hdh9a-DropdownIndicator"
                >
                  <svg
                    class="icon"
                    style="height: 24px; width: auto; fill: #007bc1;"
                    viewBox=""
                    xmlns=""
                  />
                </div>
              </div>
            </div>
            <div
              class="react-select__menu css-109xf7j-menu"
            >
              <div
                class="react-select__menu-list css-4ljt47-MenuList"
              >
                <div
                  class="react-select__option react-select__option--is-focused react-select__option--is-selected css-zq2nh-option"
                  id="react-select-3-option-0"
                  tabindex="-1"
                >
                  <div>
                    0
                  </div>
                  <svg
                    class="icon"
                    style="height: 20px; width: auto; fill: #007bc1;"
                    viewBox=""
                    xmlns=""
                  />
                </div>
                <div
                  class="react-select__option css-4khget-option"
                  id="react-select-3-option-1"
                  tabindex="-1"
                >
                  <div>
                    One
                  </div>
                  <svg
                    class="icon"
                    style="height: 20px; width: auto; fill: #007bc1;"
                    viewBox=""
                    xmlns=""
                  />
                </div>
              </div>
            </div>
            <input
              name="my-field"
              type="hidden"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a select widget component 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-default-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="react-select-container css-2b097c-container"
            id="field-my-field"
          >
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="react-select__control css-1ard45z-control"
            >
              <div
                class="react-select__value-container css-1a9cv00-ValueContainer"
              >
                <div
                  class="react-select__placeholder css-1wa3eu0-placeholder"
                >
                  Select…
                </div>
                <div
                  class="css-b8ldur-Input"
                >
                  <div
                    class="react-select__input"
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="react-select-2-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-6fp5c8-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-7hdh9a-DropdownIndicator"
                >
                  <svg
                    class="icon"
                    style="height: 24px; width: auto; fill: #007bc1;"
                    viewBox=""
                    xmlns=""
                  />
                </div>
              </div>
            </div>
            <input
              name="my-field"
              type="hidden"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
